[package]
name = "hello_cargo"
version = "0.1.0"
authors = ["munvoseli <muslinmelody@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
websocket = "0.26.2"
sdl2 = "^0"
webpki = "^0"
webpki-roots = "^0"
native-tls = "0.2.8"
json = "^0"
tokio = { version = "^0", features = ["full"] }
tokio-core = "^0"
tokio-tungstenite = "0.16.1"
tokio-rustls = "0.23.2"
rustls = "0.20.2"
tungstenite = "0.16.0"
futures = "0.3"
futures-channel = "0.3"
futures-util = { version = "0.3" }
openssl = "0.10"
url = "2.0.0"
mio = { version = "0.8", features = ["os-poll", "net"] }
