[package]
name = "hello_cargo"
version = "0.1.0"
authors = ["munvoseli <muslinmelody@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.5"
sdl2 = { version = "0.35.2", features = ["image"] }
native-tls = "0.2"
json = "^0"
tokio = { version = "1.18", features = ["full"] }
tokio-tungstenite = { version = "0.16", features = ["native-tls"] }
tungstenite = "0.16"
futures = "0.3"
futures-channel = "0.3"
futures-util = { version = "0.3" }
url = "2.0.0"
